--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-minimal
+title: [Sebastian Porling]
+description: [Well hello there! This is my GitHub pages where I talk about my self and link to interesting projects.]
+logo: [IMG_0619.png]
+show_downloads: [false]
