--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 title: <center>Sebastian Porling</center>
 description: <br>Well hello there! This is my GitHub pages where I talk about my self and link to interesting projects.
-logo: IMG_0619.png
+logo: circle-profile-picture.png
 show_downloads: false
 plugins:
   - jemoji
